--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,1 @@
-{
-  "builds": [
-    {
-      "src": "frontend/*",
-      "use": "@vercel/static"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/",
-      "dest": "/frontend/index.html"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/frontend/$1"
-    }
-  ]
-}
+{"builds":[{"src":"frontend/**/*","use":"@vercel/static"}],"routes":[{"src":"/(.*)","dest":"/frontend/$1"}]}
