--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,16 +6,20 @@ charset-normalizer==3.3.2
 click==8.1.7
 flask==3.0.0
 flask-cors==4.0.1
+gunicorn==21.2.0
 idna==3.6
+importlib-metadata==6.7.0
 itsdangerous==2.1.2
 jinja2==3.1.2
 jmespath==1.0.1
 markupsafe==2.1.3
+packaging==23.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 requests==2.31.0
 s3transfer==0.10.0
+**sib-api-v3-sdk==8.5.0**  ← THIS IS THE ONLY NEW LINE
 six==1.16.0
-urllib3==2.1.0
+urllib3==1.26.18
 werkzeug==3.0.1
-gunicorn==21.2.0
+zipp==3.15.0
