--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -18,7 +18,7 @@ python-dateutil==2.8.2
 python-dotenv==1.0.0
 requests==2.31.0
 s3transfer==0.10.0
-**sib-api-v3-sdk==8.5.0**  ← THIS IS THE ONLY NEW LINE
+sib-api-v3-sdk==8.5.0
 six==1.16.0
 urllib3==1.26.18
 werkzeug==3.0.1
