--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,25 +1,22 @@
-blinker==1.8.2
-boto3==1.34.0
-botocore==1.34.0
-certifi==2024.12.14
-charset-normalizer==3.3.2
-click==8.1.7
-flask==3.0.0
-flask-cors==4.0.1
-gunicorn==21.2.0
-idna==3.6
-importlib-metadata==6.7.0
-itsdangerous==2.1.2
-jinja2==3.1.2
-jmespath==1.0.1
-markupsafe==2.1.3
-packaging==23.1
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-requests==2.31.0
-s3transfer==0.10.0
-sib-api-v3-sdk==7.6.0
-six==1.16.0
-urllib3==1.26.18
-werkzeug==3.0.1
-zipp==3.15.0
+blinker==1.9.0
+boto3==1.42.44
+botocore==1.42.44
+certifi==2026.1.4
+charset-normalizer==3.4.4
+click==8.3.1
+Flask==3.1.2
+flask-cors==6.0.2
+idna==3.11
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jmespath==1.1.0
+MarkupSafe==3.0.3
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+requests==2.32.5
+resend==2.21.0
+s3transfer==0.16.0
+six==1.17.0
+typing_extensions==4.15.0
+urllib3==2.6.3
+Werkzeug==3.1.5
