--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -20,3 +20,9 @@ six==1.17.0
 typing_extensions==4.15.0
 urllib3==2.6.3
 Werkzeug==3.1.5
+gunicorn==21.2.0
+sib-api-v3-sdk==7.6.0
+flask-sqlalchemy==3.0.5
+psycopg2-binary==2.9.9
+flask-bcrypt==1.0.1
+pyjwt==2.8.0
